@@ -3,7 +3,7 @@ package com.busticket.service.impl;
 import com.busticket.dto.response.BookingResponse;
 import com.busticket.entity.Booking;
 import com.busticket.entity.Payment;
-import com.busticket.entity.enums.BookingStatus;
+import com.busticket.exception.ResourceNotFoundException;
 import com.busticket.mapper.response.BookingResponseMapper;
 import com.busticket.respository.IBookingRepo;
 import com.busticket.respository.IPaymentRepo;
@@ -11,8 +11,6 @@ import com.busticket.service.interfaces.IBookingService;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 public class BookingServiceImpl implements IBookingService {
@@ -25,41 +23,18 @@ public class BookingServiceImpl implements IBookingService {
         this.paymentRepo = paymentRepo;
     }
 
-    private Map<Integer, Payment> getPaymentMap(List<Booking> bookings) {
-        List<Integer> bookingIds = bookings.stream()
-                .map(Booking::getBookingId)
-                .collect(Collectors.toList());
-        return paymentRepo.findByBookingIds(bookingIds).stream()
-                .collect(Collectors.toMap(p -> p.getBooking().getBookingId(), p -> p, (a, b) -> a));
-    }
-
     @Override
     public List<BookingResponse> getAllBookings() {
-        List<Booking> bookings = bookingRepo.findAll();
-        Map<Integer, Payment> paymentMap = getPaymentMap(bookings);
-        return bookings.stream()
-                .map(b -> BookingResponseMapper.entityToResponse(b, paymentMap.get(b.getBookingId())))
-                .collect(Collectors.toList());
+        return bookingRepo.findAllWithPayment().stream()
+                .map(row -> BookingResponseMapper.entityToResponse((Booking) row[0], (Payment) row[1]))
+                .toList();
     }
 
     @Override
     public BookingResponse getBookingByID(Integer id) {
-        Booking booking = bookingRepo.findById(id).orElse(null);
+        Booking booking = bookingRepo.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Booking not found with id: " + id));
         Payment payment = paymentRepo.findFirstByBooking_BookingId(id).orElse(null);
         return BookingResponseMapper.entityToResponse(booking, payment);
-    }
-
-    @Override
-    public List<BookingResponse> getBookingByTripID(Integer id) {
-        List<Booking> bookings = bookingRepo.findByTrip_TripId(id);
-        Map<Integer, Payment> paymentMap = getPaymentMap(bookings);
-        return bookings.stream()
-                .map(b -> BookingResponseMapper.entityToResponse(b, paymentMap.get(b.getBookingId())))
-                .collect(Collectors.toList());
-        }
-
-    @Override
-    public int numberOfSeatsBookedByTripID(Integer id) {
-        return bookingRepo.findByTrip_TripIdAndStatus(id, BookingStatus.Booked).size();
     }
 }
